# airbase

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/actions/setup-project/: action.yaml
.github/workflows/: cicd.yaml
airbase/: __init__.py  __version__.py  _fetch.py  airbase.py  cli.py  download_api.py  fetch.py  main.py  resources.py  summary.py  util.py
airbase/csv_api/: __init__.py  client.py  dataset.py  session.py  types.py
airbase/download_api/: __init__.py  abstract_api_client.py  api_client.py  api_info.py  client.py  concrete_api_client.py  dataset.py  download_session.py  session.py
airbase/parquet_api/: __init__.py  client.py  dataset.py  download.py  session.py  types.py
airbase/plugins/: catalog.py  cli.py
airbase/summary/: __init__.py  db.py  summary.json  summary.sqlite
airbase_cli_plugin/: plugin.py  pyproject.toml
docs/: Makefile  requirements.txt
docs/source/: airbase.csv_api.rst  airbase.parquet_api.rst  airbase.rst  airbase.summary.rst  conf.py  index.rst  modules.rst
docs/source/api/: airbase.airbase.rst  airbase.cli.rst  airbase.csv_api.client.rst  airbase.csv_api.dataset.rst  airbase.csv_api.rst  airbase.csv_api.session.rst  airbase.csv_api.types.rst  airbase.parquet_api.client.rst  airbase.parquet_api.dataset.rst  airbase.parquet_api.rst  airbase.parquet_api.session.rst  airbase.parquet_api.types.rst  airbase.rst  airbase.summary.db.rst  airbase.summary.rst  modules.rst
scripts/: check_broken_links.py  create_summary_db.py  download_test_data.py  summary_db.py
tests/: conftest.py  test_airbase.py  test_cli.py  test_csv_api.py  test_download_api.py  test_fetch.py  test_parquet_api.py  test_summary.py  test_utils.py  test_version.py
tests/airbase/: test_client.py  test_integration.py  test_request.py
tests/integration/: test_airbase.py  test_cli.py  test_download_api.py  test_parquet_api.py  test_quickstart.py  test_summary.py
tests/resources/: Legacy_MT_SO2.csv  MT_Historical_Valletta.csv  MT_Historical_Valletta.json  __init__.py  city.json  country.json  csv_links_response.txt  csv_response.csv  property.json  summary.json
tests/resources/integration/: test_airbase.py
