[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--showlocals"
testpaths = ["tests"]
filterwarnings = [
    # DeprecationWarning are errors
    "error::DeprecationWarning:(airbase|tests).*:",
]

[tool.coverage.run]
source = ["airbase"]

[tool.coverage.report]
skip_covered = true
skip_empty = true
show_missing = true

[tool.ruff]
target-version = "py38"
line-length = 80
extend-exclude = ["docs", "scripts", "build"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = [
    "E501", # https://docs.astral.sh/ruff/rules/line-too-long/
]

[tool.ruff.lint.per-file-ignores]
"cli.py" = [ # typer needs typing.Optional and typing.List
    "UP006", # https://docs.astral.sh/ruff/rules/non-pep585-annotation/
    "UP007", # https://docs.astral.sh/ruff/rules/non-pep604-annotation/
]

[tool.mypy]
python_version = "3.8"
warn_unused_configs = true
warn_unused_ignores = false
warn_no_return = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
pretty = true
sqlite_cache = true
exclude = "docs|scripts|build"

[[tool.mypy.overrides]]
module = ["tqdm"]
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311, py312, lint, docs, integration
skip_missing_interpreters = True
isolated_build = True

[testenv]
commands_pre =
    python --version
commands =
    pytest -ra -q {posargs:--cov -k "not integration"}
extras = 
    test

[testenv:integration]
commands_pre =
    python --version
commands =
    pytest -ra -q {posargs:--cov -k integration}
extras = 
    test

[testenv:lint]
skipsdist=True
commands =
    pre-commit run --all-files --show-diff-on-failure
deps =
    pre-commit

[testenv:docs]
skipsdist=True
commands =
    sphinx-build {posargs:-M html} docs/source docs/build
extras = 
    docs
"""
