[metadata]
name = airbase
version = 0.2.7
author = John Paton
description = An easy downloader for the AirBase air quality data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnpaton/airbase
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
python_requires = >=3.7,<4
install_requires =
    requests
    tqdm
packages = find:
include_package_data = True

[options.packages.find]
exclude = 
	tests
	tests.*

[options.extras_require]
    docs =
        sphinx>=4.2.0
        sphinx_rtd_theme
    test =
        pytest>=6.0
        responses
        pytest-responses
        pytest-mock
        pytest-cov
    format =
        black==21.9b0
        isort
    lint =
        mypy>=0.910
        types-requests
