[metadata]
name = airbase
author = John Paton
description = An easy downloader for the AirBase air quality data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnpaton/airbase
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
python_requires = >=3.7,<4
install_requires =
    aiohttp; python_version < "3.12"
    aiohttp >= 3.9.0; python_version >= "3.12"
    aiofiles
    importlib_resources; python_version < "3.11"
    tqdm
    typing_extensions; python_version < "3.8"
    click
packages = find:
include_package_data = True

[options.packages.find]
exclude = 
	tests
	tests.*

[options.entry_points]
console_scripts =
    airbase = airbase.cli:main

[options.extras_require]
docs =
    sphinx>=4.2.0
    sphinx_rtd_theme
    importlib_metadata; python_version < "3.8"
test =
    pytest>=6.0
    aioresponses
    pytest-cov
