[project]
name = "airbase-cli-plugin"
version = "0.1.0"
description = "AirBase CLI Plugin"
requires-python = ">=3.9"
dependencies = ["typer-slim >=0.12.0"]

[project.entry-points."airbase.cli"]
plugin-sub = "plugin:main"
plugin-cmd = "plugin:command"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["plugin.py"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "plugin.py" }]
